--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,13 @@
-version: "3.9"
+version: "3.7"
 
 services:
   app:
     build: .
     ports:
-      - "8085:8086"
+      - "8085:8085"
+    networks:
+     - emp-network
+
 
   postgres:
     image: postgres:latest
@@ -13,7 +16,19 @@ services:
       POSTGRES_PASSWORD: admin@123
       POSTGRES_DB: postgres
     ports:
-      - 5432:5433
+      - 5433:5432
+    networks:
+      - emp-network
+    volumes:
+      - postgres-e-data:/var/lib/postgresql/data
+
+networks:
+  emp-network:
+    driver: bridge
+
+volumes:
+  postgres-e-data:
+
 
 
 
